--- a/EstateManagementUI/Pages/Operator/OperatorDialog.cshtml
+++ b/EstateManagementUI/Pages/Operator/OperatorDialog.cshtml
@@ -1,10 +1,10 @@
-﻿@model EstateManagementUI.Pages.Operator.AddNewOperatorDialog
+﻿@model EstateManagementUI.Pages.Operator.OperatorDialog
 <div class="modal d-block init" tabindex="-1">
-    <div class="modal-dialog shadow-lg" id="AddNewOperatorDialog">
+    <div class="modal-dialog shadow-lg" id="OperatorDialog">
         <div class="modal-content @(!Model.ModelState.IsValid ? "shake" : null)" x-init="@DateTime.Now.Ticks; @(!Model.ModelState.IsValid ? "setTimeout(() => $el.classList.remove('shake'), 300)" : null)">
             <form hydro-on:submit="@(() => Model.Save())">
                 <div class="modal-header">
-                    <h5 class="modal-title">New Operator</h5>
+                    <h5 class="modal-title">@((Model.OperatorId != Guid.Empty) ? "Edit Operator" : "New Operator")</h5>
                     <button type="button" class="btn-close" aria-label="Close" hydro-action="Close"></button>
                 </div>
                 <div class="modal-body">
