View file import log list

--- a/EstateManagementUI/Pages/FileProcessing/Index.cshtml
+++ b/EstateManagementUI/Pages/FileProcessing/Index.cshtml
@@ -1,5 +1,7 @@
 ﻿@page
 @model EstateManagementUI.Pages.FileProcessing.IndexModel
 @{
+    Layout = "_Layout";
+    ViewData["Title"] = "View File Import Logs";
 }
-<p>File Processing Main Page</p>
+<hydro name="FileImportLogList" />
