adding permissions enforcement for tests

--- a/EstateManagementUI/Pages/Estate/UsersList/UsersList.Table.cshtml
+++ b/EstateManagementUI/Pages/Estate/UsersList/UsersList.Table.cshtml
@@ -1,4 +1,4 @@
-﻿@model EstateManagementUI.Pages.Estate.UsersList
+﻿@model EstateManagementUI.Pages.Estate.UsersList.UsersList
 
 <table class="table table-sm">
     <thead>
