--- a/EstateManagementUI/Pages/Merchant/MerchantsList/MerchantList.Table.cshtml
+++ b/EstateManagementUI/Pages/Merchant/MerchantsList/MerchantList.Table.cshtml
@@ -1,5 +1,5 @@
 ﻿@using EstateManagementUI.ViewModels
-@model EstateManagementUI.Pages.Merchant.MerchantsList
+@model EstateManagementUI.Pages.Merchant.MerchantsList.MerchantsList
 
 @{
     string GetSorting(MerchantSorting sorting) =>
