--- a/EstateManagementUI/Pages/Operator/OperatorsList/OperatorList.Table.cshtml
+++ b/EstateManagementUI/Pages/Operator/OperatorsList/OperatorList.Table.cshtml
@@ -2,7 +2,7 @@
 @using EstateManagementUI.ViewModels
 @using Hydro.TagHelpers
 @using Microsoft.AspNetCore.Mvc.TagHelpers
-@model EstateManagementUI.Pages.Operator.OperatorsList
+@model EstateManagementUI.Pages.Operator.OperatorsList.OperatorsList
 
 @{
     String GetSorting(OperatorSorting sorting) {
