--- a/EstateManagementUI/Pages/Estate/ViewEstate/ViewEstate.cshtml
+++ b/EstateManagementUI/Pages/Estate/ViewEstate/ViewEstate.cshtml
@@ -1,4 +1,4 @@
-﻿@model EstateManagementUI.Pages.Estate.ViewEstate
+﻿@model EstateManagementUI.Pages.Estate.ViewEstate.ViewEstate
 
     <div class="card o-hidden border-0 shadow-sm my-5">
         <div class="card-body p-0">
