--- a/EstateManagementUI/Pages/Operator/OperatorDialogs/EditOperatorDialog.cshtml
+++ b/EstateManagementUI/Pages/Operator/OperatorDialogs/EditOperatorDialog.cshtml
@@ -1,16 +1,16 @@
-﻿@model EstateManagementUI.Pages.Operator.OperatorDialog
+﻿@model EstateManagementUI.Pages.Operator.OperatorDialogs.EditOperatorDialog
 <div class="modal d-block init" tabindex="-1">
     <div class="modal-dialog shadow-lg" id="OperatorDialog">
         <div class="modal-content @(!Model.ModelState.IsValid ? "shake" : null)" x-init="@DateTime.Now.Ticks; @(!Model.ModelState.IsValid ? "setTimeout(() => $el.classList.remove('shake'), 300)" : null)">
             <form hydro-on:submit="@(() => Model.Save())">
                 <div class="modal-header">
-                    <h5 class="modal-title">@((Model.OperatorId != Guid.Empty) ? "Edit Operator" : "New Operator")</h5>
+                    <h5 class="modal-title">Edit Operator</h5>
                     <button type="button" class="btn-close" aria-label="Close" hydro-action="Close"></button>
                 </div>
                 <div class="modal-body">
                     <div class="mb-3">
                         <label asp-for="Name" class="form-label">Name</label>
-                        <input asp-for="Name" placeholder="Enter Operator Name" class="form-control" x-init="$el.focus()" hydro-bind id="operatorName"/>
+                        <input asp-for="Name" placeholder="Enter Operator Name" class="form-control" x-init="$el.focus()" hydro-bind id="operatorName" />
                         <span asp-validation-for="Name" class="text-danger"></span>
                     </div>
 
