Edit merchant added

--- a/EstateManagementUI/Pages/Estate/UsersList/UsersList.cshtml
+++ b/EstateManagementUI/Pages/Estate/UsersList/UsersList.cshtml
@@ -19,7 +19,7 @@
                         }
                         else
                         {
-                            <partial name="UsersList.Table"/>
+                            <partial name="UsersList.Table.cshtml"/>
                         }
                     </div>
                 </div>
