--- a/EstateManagementUI/Pages/Operator/OperatorDialogs/NewOperatorDialog.cshtml
+++ b/EstateManagementUI/Pages/Operator/OperatorDialogs/NewOperatorDialog.cshtml
@@ -26,7 +26,7 @@
                 </div>
                 <div class="modal-footer">
                     <button type="button" class="btn btn-outline-secondary" data-bs-dismiss="modal" hydro-action="Close" id="closeButton">Close</button>
-                    <button type="submit" class="btn btn-primary" id="saveNewOperatorButton">Save</button>
+                    <button type="submit" class="btn btn-primary" id="saveOperatorButton">Save</button>
                 </div>
             </form>
         </div>
