--- a/EstateManagementUI/Pages/Shared/_Layout.cshtml
+++ b/EstateManagementUI/Pages/Shared/_Layout.cshtml
@@ -32,6 +32,9 @@
     <!-- apexcharts -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/apexcharts@3.37.1/dist/apexcharts.css" integrity="sha256-4MX+61mt9NVvvuPjUWdUdyfZfxSB1/Rf9WtqRHgG5S0=" crossorigin="anonymous">
     
+    <link rel="stylesheet" href="~/css/site.css" asp-append-version="true" />
+    <link rel="stylesheet" href="~/EstateManagementUI.styles.css" asp-append-version="true" />
+
     <meta name="hydro-config" />
     <script defer src="~/hydro/hydro.js" asp-append-version="true"></script>
     <script defer src="~/hydro/alpine.js" asp-append-version="true"></script>
