--- a/EstateManagementUI/Pages/Contract/ContractProduct/ContractProductList.Table.cshtml
+++ b/EstateManagementUI/Pages/Contract/ContractProduct/ContractProductList.Table.cshtml
@@ -1,4 +1,5 @@
-﻿@using EstateManagementUI.Pages.Shared
+﻿@using EstateManagementUI.BusinessLogic.PermissionService.Constants
+@using EstateManagementUI.Pages.Shared
 @using EstateManagementUI.ViewModels
 @using Hydro.TagHelpers
 @using Microsoft.AspNetCore.Mvc.TagHelpers
@@ -55,8 +56,7 @@
             <td class="align-middle text-end">
                 @{
                     TableDropdownItem[] menuItems = new TableDropdownItem[] {
-                        //new("Edit", () => Model.Edit(@contractModel.ContractId), $@"{contractModel.Description}Edit"),
-                new("View Fees", () => Model.ViewProductFees(@contractProductModel.ContractProductId), $@"{@contractProductModel.ProductName.Replace(" ", "")}ViewFees")
+                        new("View Fees", () => Model.ViewProductFees(@contractProductModel.ContractProductId), ApplicationSections.Contract, ContractFunctions.ViewProductFeesList, $@"{@contractProductModel.ProductName.Replace(" ", "")}ViewFees")
                     };
                 }
 
