--- a/EstateManagementUI/Pages/FileProcessing/FileImportLog/FileImportLog.Table.cshtml
+++ b/EstateManagementUI/Pages/FileProcessing/FileImportLog/FileImportLog.Table.cshtml
@@ -1,4 +1,5 @@
-﻿@using EstateManagementUI.Pages.FileProcessing.FileImportLogs
+﻿@using EstateManagementUI.BusinessLogic.PermissionService.Constants
+@using EstateManagementUI.Pages.FileProcessing.FileImportLogs
 @using EstateManagementUI.Pages.Shared
 @using EstateManagementUI.ViewModels
 @using Hydro.TagHelpers
@@ -58,7 +59,7 @@
                     @{
                         TableDropdownItem[] menuItems = new TableDropdownItem[]
                         {
-                        new("View Details", () => Model.ViewFileDetails(@fileModel.FileId), $@"{@fileModel.FileId.ToString().Replace("-", "")}ViewFiles")
+                new("View Details", () => Model.ViewFileDetails(@fileModel.FileId), ApplicationSections.FileProcessing, FileProcessingFunctions.ViewFileDetails,$@"{@fileModel.FileId.ToString().Replace("-", "")}ViewFiles")
                         };
                     }
 
