--- a/EstateManagementUI/Pages/FileProcessing/FileImportLogs/FileImportLogList.Table.cshtml
+++ b/EstateManagementUI/Pages/FileProcessing/FileImportLogs/FileImportLogList.Table.cshtml
@@ -1,4 +1,5 @@
-﻿@using EstateManagementUI.Pages.Shared
+﻿@using EstateManagementUI.BusinessLogic.PermissionService.Constants
+@using EstateManagementUI.Pages.Shared
 @using Hydro.TagHelpers
 @using Microsoft.AspNetCore.Mvc.TagHelpers
 @model FileImportLogList
@@ -38,7 +39,7 @@
                     @{
                         TableDropdownItem[] menuItems = new TableDropdownItem[]
                         {
-                            new("View Files", () => Model.ViewFiles(@fileImportLogModel.FileImportLogId), $@"{fileImportLogModel.ImportLogDate}ViewFiles")
+                            new("View Files", () => Model.ViewFiles(@fileImportLogModel.FileImportLogId), ApplicationSections.FileProcessing, FileProcessingFunctions.ViewImportLog,  $@"{fileImportLogModel.ImportLogDate}ViewFiles")
                         };
                     }
 
