--- a/EstateManagementUI/Pages/Merchant/MerchantsList/MerchantsList.cshtml
+++ b/EstateManagementUI/Pages/Merchant/MerchantsList/MerchantsList.cshtml
@@ -1,4 +1,5 @@
-﻿@model MerchantsList
+﻿@using EstateManagementUI.BusinessLogic.PermissionService.Constants
+@model MerchantsList
 
     <div class="card o-hidden border-0 shadow-sm my-5">
         <div class="card-body p-0">
@@ -10,11 +11,12 @@
                             <h1 class="h4 text-gray-900 mb-4">Merchants</h1>
                         </div>
                     <div>
-
-                        <button class="btn btn-primary" type="button" hydro-action="Add" id="newMerchantButton">
-                            New Merchant
-                        </button>
-                    </div>
+                        @if(await Model.CanRenderButton(ApplicationSections.Merchant, MerchantFunctions.New)){
+                            <button class="btn btn-primary" type="button" hydro-action="Add" id="newMerchantButton">
+                                New Merchant
+                            </button>
+                        }
+                        </div>
                         @if (Model.Merchants.Any() == false)
                         {
                             <div class="bg-base-200 rounded text-center p-4">
