make permission on drop down a tuple

--- a/EstateManagementUI/Pages/Contract/Contracts/ContractList.Table.cshtml
+++ b/EstateManagementUI/Pages/Contract/Contracts/ContractList.Table.cshtml
@@ -46,7 +46,7 @@
                     @{
                         TableDropdownItem[] menuItems = new TableDropdownItem[]
                         {
-                            new("View Products", () => Model.ViewProducts(@contractModel.ContractId), ApplicationSections.Contract, ContractFunctions.ViewProductsList,$@"{contractModel.Description}ViewProducts")
+                            new("View Products", () => Model.ViewProducts(@contractModel.ContractId), (ApplicationSections.Contract, ContractFunctions.ViewProductsList),$@"{contractModel.Description}ViewProducts")
                         };
                     }
 
