--- a/EstateManagementUI/Pages/FileProcessing/FileImportLogs/FileImportLogList.Table.cshtml
+++ b/EstateManagementUI/Pages/FileProcessing/FileImportLogs/FileImportLogList.Table.cshtml
@@ -39,7 +39,7 @@
                     @{
                         TableDropdownItem[] menuItems = new TableDropdownItem[]
                         {
-                            new("View Files", () => Model.ViewFiles(@fileImportLogModel.FileImportLogId), ApplicationSections.FileProcessing, FileProcessingFunctions.ViewImportLog,  $@"{fileImportLogModel.ImportLogDate}ViewFiles")
+                            new("View Files", () => Model.ViewFiles(@fileImportLogModel.FileImportLogId), (ApplicationSections.FileProcessing, FileProcessingFunctions.ViewImportLog),  $@"{fileImportLogModel.ImportLogDate}ViewFiles")
                         };
                     }
 
