--- a/EstateManagementUI/Pages/PermissionManagement/Roles/EditRole/RoleUsersList.Table.cshtml
+++ b/EstateManagementUI/Pages/PermissionManagement/Roles/EditRole/RoleUsersList.Table.cshtml
@@ -21,7 +21,7 @@
                     @{
                         TableDropdownItem[] menuItems = new TableDropdownItem[]
                         {
-                            new("Remove", () => Model.Remove(Model.Id, userName), null, null)
+                            new("Remove", () => Model.Remove(Model.Id, userName), default)
                         };
                     }
 
