--- a/EstateManagementUI/Pages/Contract/ContractProduct/ContractProductList.Table.cshtml
+++ b/EstateManagementUI/Pages/Contract/ContractProduct/ContractProductList.Table.cshtml
@@ -56,7 +56,7 @@
             <td class="align-middle text-end">
                 @{
                     TableDropdownItem[] menuItems = new TableDropdownItem[] {
-                        new("View Fees", () => Model.ViewProductFees(@contractProductModel.ContractProductId), ApplicationSections.Contract, ContractFunctions.ViewProductFeesList, $@"{@contractProductModel.ProductName.Replace(" ", "")}ViewFees")
+                        new("View Fees", () => Model.ViewProductFees(@contractProductModel.ContractProductId), (ApplicationSections.Contract, ContractFunctions.ViewProductFeesList), $@"{@contractProductModel.ProductName.Replace(" ", "")}ViewFees")
                     };
                 }
 
