--- a/EstateManagementUI/Pages/Merchant/MerchantsList/MerchantList.Table.cshtml
+++ b/EstateManagementUI/Pages/Merchant/MerchantsList/MerchantList.Table.cshtml
@@ -64,8 +64,8 @@
                 @{
                     TableDropdownItem[] menuItems = new TableDropdownItem[]
                     {
-                        new("Edit", () => Model.Edit(@merchantModel.Id), $@"{merchantModel.Name}Edit", ApplicationSections.Merchant, MerchantFunctions.Edit),
-                        new("View", () => Model.View(@merchantModel.Id), $@"{merchantModel.Name}View", ApplicationSections.Merchant, MerchantFunctions.View)
+                new("Edit", () => Model.Edit(@merchantModel.Id), (ApplicationSections.Merchant, MerchantFunctions.Edit), $@"{merchantModel.Name}Edit"),
+                new("View", () => Model.View(@merchantModel.Id), (ApplicationSections.Merchant, MerchantFunctions.View), $@"{merchantModel.Name}View")
                     };
                 }
 
