--- a/EstateManagementUI/Pages/Merchant/MerchantDetails/EditMerchant.cshtml
+++ b/EstateManagementUI/Pages/Merchant/MerchantDetails/EditMerchant.cshtml
@@ -1,4 +1,8 @@
-﻿@model EstateManagementUI.Pages.Merchant.MerchantDetails.EditMerchant
+﻿@using EstateManagementUI.BusinessLogic.PermissionService.Constants
+@using EstateManagementUI.Pages.Shared
+@using Hydro.TagHelpers
+@using Microsoft.AspNetCore.Mvc.TagHelpers
+@model EstateManagementUI.Pages.Merchant.MerchantDetails.EditMerchant
 
 @{
     string IsActiveTab(string tab) {
@@ -18,61 +22,61 @@
             <div class="col-lg-7">
                 <div class="p-5">
                     <form hydro-on:submit="@(() => Model.Save())">
-                    <ul class="nav nav-tabs" id="myTab" role="tablist">
-                        <button id="nav-merchantdetails-tab"
-                                data-bs-toggle="tab"
-                                data-bs-target="#merchantdetails"
-                                type="button"
-                                role="tab"
-                                class="@IsActiveTab("merchantdetails")"
-                                hydro-on:click="@(() => Model.SetActiveTab("merchantdetails"))">
-                            Details
-                        </button>
+                        <ul class="nav nav-tabs" id="myTab" role="tablist">
+                            <button id="nav-merchantdetails-tab"
+                                    data-bs-toggle="tab"
+                                    data-bs-target="#merchantdetails"
+                                    type="button"
+                                    role="tab"
+                                    class="@IsActiveTab("merchantdetails")"
+                                    hydro-on:click="@(() => Model.SetActiveTab("merchantdetails"))">
+                                Details
+                            </button>
 
-                        <button id="nav-address-tab"
-                                data-bs-toggle="tab"
-                                data-bs-target="#address"
-                                type="button"
-                                role="tab"
-                                class="@IsActiveTab("address")"
-                                hydro-on:click="@(() => Model.SetActiveTab("address"))">
-                            Addresses
-                        </button>
+                            <button id="nav-address-tab"
+                                    data-bs-toggle="tab"
+                                    data-bs-target="#address"
+                                    type="button"
+                                    role="tab"
+                                    class="@IsActiveTab("address")"
+                                    hydro-on:click="@(() => Model.SetActiveTab("address"))">
+                                Addresses
+                            </button>
 
-                        <button id="nav-contacts-tab"
-                                data-bs-toggle="tab"
-                                data-bs-target="#contacts"
-                                type="button"
-                                role="tab"
-                                class="@IsActiveTab("contacts")"
-                                hydro-on:click="@(() => Model.SetActiveTab("contacts"))">
-                            Contacts
-                        </button>
+                            <button id="nav-contacts-tab"
+                                    data-bs-toggle="tab"
+                                    data-bs-target="#contacts"
+                                    type="button"
+                                    role="tab"
+                                    class="@IsActiveTab("contacts")"
+                                    hydro-on:click="@(() => Model.SetActiveTab("contacts"))">
+                                Contacts
+                            </button>
 
-                        <button id="nav-operators-tab"
-                                data-bs-toggle="tab"
-                                data-bs-target="#operators"
-                                type="button"
-                                role="tab"
-                                class="@IsActiveTab("operators")"
-                                hydro-on:click="@(() => Model.SetActiveTab("operators"))">
-                            Operators
-                        </button>
+                            <button id="nav-operators-tab"
+                                    data-bs-toggle="tab"
+                                    data-bs-target="#operators"
+                                    type="button"
+                                    role="tab"
+                                    class="@IsActiveTab("operators")"
+                                    hydro-on:click="@(() => Model.SetActiveTab("operators"))">
+                                Operators
+                            </button>
 
-                        <button id="nav-devices-tab"
-                                data-bs-toggle="tab"
-                                data-bs-target="#devices"
-                                type="button"
-                                role="tab"
-                                class="@IsActiveTab("devices")"
-                                hydro-on:click="@(() => Model.SetActiveTab("devices"))">
-                            Devices
-                        </button>
-                    </ul>
+                            <button id="nav-devices-tab"
+                                    data-bs-toggle="tab"
+                                    data-bs-target="#devices"
+                                    type="button"
+                                    role="tab"
+                                    class="@IsActiveTab("devices")"
+                                    hydro-on:click="@(() => Model.SetActiveTab("devices"))">
+                                Devices
+                            </button>
+                        </ul>
 
-                    <div class="tab-content" id="myTabContent">
-                        <!-- Details Tab -->
-                        <div class="@IsActiveTabPane("merchantdetails")" id="merchantdetails" role="tabpanel" aria-labelledby="nav-merchantdetails-tab">
+                        <div class="tab-content" id="myTabContent">
+                            <!-- Details Tab -->
+                            <div class="@IsActiveTabPane("merchantdetails")" id="merchantdetails" role="tabpanel" aria-labelledby="nav-merchantdetails-tab">
                                 <div class="row">
                                     <div class="col-md-6">
                                         <label asp-for="Name" class="form-label">Name</label>
@@ -91,10 +95,10 @@
                                         <select asp-for="SettlementSchedule" asp-items="Model.SettlementSchedule.SettlementSchedule" class="form-control" hydro-bind name="SettlementSchedule.SettlementScheduleId" id="settlementSchedule"></select>
                                     </div>
                                 </div>
-                        </div>
+                            </div>
 
-                        <!-- Addresses Tab -->
-                        <div class="@IsActiveTabPane("address")" id="address" role="tabpanel" aria-labelledby="nav-address-tab">
+                            <!-- Addresses Tab -->
+                            <div class="@IsActiveTabPane("address")" id="address" role="tabpanel" aria-labelledby="nav-address-tab">
                                 <div class="col-md-8">
                                     <label asp-for="Address.AddressLine1" class="control-label">Address Line 1</label>
                                     <input asp-for="Address.AddressLine1" class="form-control form-control-user" hydro-bind name="Address.AddressLine1" id="addressLine1"/>
@@ -123,10 +127,10 @@
                                         <input asp-for="Address.Country" class="form-control form-control-user" hydro-bind name="Address.Country" id="country"/>
                                     </div>
                                 </div>
-                        </div>
+                            </div>
 
-                        <!-- Contacts Tab -->
-                        <div class="@IsActiveTabPane("contacts")" id="contacts" role="tabpanel" aria-labelledby="nav-contacts-tab">
+                            <!-- Contacts Tab -->
+                            <div class="@IsActiveTabPane("contacts")" id="contacts" role="tabpanel" aria-labelledby="nav-contacts-tab">
                                 <div class="form-row">
                                     <label asp-for="Contact.ContactName" class="control-label">Name</label>
                                     <input asp-for="Contact.ContactName" class="form-control form-control-user" hydro-bind name="Contact.ContactName" id="contactName"/>
@@ -141,59 +145,80 @@
                                         <input asp-for="Contact.PhoneNumber" class="form-control form-control-user" hydro-bind name="Contact.PhoneNumber" id="contactPhoneNumber"/>
                                     </div>
                                 </div>
-                        </div>
+                            </div>
 
-                        <!-- Operators Tab -->
-                        <div class="@IsActiveTabPane("operators")" id="operators" role="tabpanel" aria-labelledby="nav-operators-tab">
-                            <table class="table table-sm" id="merchantOperatorList">
-                                <thead class="thead-light">
-                                <tr class="d-flex">
-                                    <th class="col-2">Name</th>
-                                    <th class="col-3">Merchant Number</th>
-                                    <th class="col-3">Terminal Number</th>
-                                    <th class="col-2">Is Deleted</th>
-                                    <th class="col-1"></th>
-                                </tr>
-                                </thead>
-                                <tbody>
-                                @foreach (MerchantOperatorViewModel merchantOperatorModel in Model.Operators) {
-                                    <tr class="hover d-flex">
-                                        <td class="col-2">@merchantOperatorModel.Name</td>
-                                        <td class="col-3">@merchantOperatorModel.MerchantNumber</td>
-                                        <td class="col-3">@merchantOperatorModel.TerminalNumber</td>
-                                        <td class="col-2">@merchantOperatorModel.IsDeleted</td>
-                                        <td class="align-middle text-end"></td>
+                            <!-- Operators Tab -->
+                            <div class="@IsActiveTabPane("operators")" id="operators" role="tabpanel" aria-labelledby="nav-operators-tab">
+                                <button class="btn btn-primary btn-sm" id="addOperatorButton" hydro-on:click="@(() => Model.AddOperator())">Add Operator</button>
+                                <table class="table table-sm" id="merchantOperatorList">
+                                    <thead class="thead-light">
+                                    <tr class="d-flex">
+                                        <th class="col-2">Name</th>
+                                        <th class="col-3">Merchant Number</th>
+                                        <th class="col-3">Terminal Number</th>
+                                        <th class="col-2">Is Deleted</th>
+                                        <th class="col-1"></th>
                                     </tr>
-                                }
-                                </tbody>
-                            </table>
-                        </div>
+                                    </thead>
+                                    <tbody>
+                                    @foreach (MerchantOperatorViewModel merchantOperatorModel in Model.Operators) {
+                                        <tr class="hover d-flex">
+                                            <td class="col-2">@merchantOperatorModel.Name</td>
+                                            <td class="col-3">@merchantOperatorModel.MerchantNumber</td>
+                                            <td class="col-3">@merchantOperatorModel.TerminalNumber</td>
+                                            <td class="col-2">@merchantOperatorModel.IsDeleted</td>
+                                            <td class="align-middle text-end">
+                                                @{
+                                                    TableDropdownItem[] menuItems = new TableDropdownItem[]
+                                                    {
+                                                        new("Remove", () => Model.RemoveOperator(Model.MerchantId, merchantOperatorModel.OperatorId), (ApplicationSections.Merchant, MerchantFunctions.RemoveOperator), $"{merchantOperatorModel.Name}Remove"),
+                                                    };
+                                                }
 
-                        <!-- Devices Tab -->
-                        <div class="@IsActiveTabPane("devices")" id="devices" role="tabpanel" aria-labelledby="nav-devices-tab">
-                            <table class="table table-sm" id="merchantDeviceList">
-                                <thead class="thead-light">
-                                <tr class="d-flex">
-                                    <th class="col-4">Device</th>
-                                    <th class="col-1"></th>
-                                </tr>
-                                </thead>
-                                <tbody>
-                                @foreach (MerchantDeviceViewModel merchantDeviceModel in Model.Devices) {
-                                    <tr class="hover d-flex">
-                                        <td class="col-4">@merchantDeviceModel.DeviceIdentifier</td>
-                                        <td class="align-middle text-end"></td>
+                                                <partial name="TableDropdown" model="@menuItems" />
+                                            </td>
+                                        </tr>
+                                    }
+                                    </tbody>
+                                </table>
+                            </div>
+
+                            <!-- Devices Tab -->
+                            <div class="@IsActiveTabPane("devices")" id="devices" role="tabpanel" aria-labelledby="nav-devices-tab">
+                                <table class="table table-sm" id="merchantDeviceList">
+                                    <thead class="thead-light">
+                                    <tr class="d-flex">
+                                        <th class="col-4">Device</th>
+                                        <th class="col-1"></th>
                                     </tr>
-                                }
-                                </tbody>
-                            </table>
+                                    </thead>
+                                    <tbody>
+                                    @foreach (MerchantDeviceViewModel merchantDeviceModel in Model.Devices) {
+                                        <tr class="hover d-flex">
+                                            <td class="col-4">@merchantDeviceModel.DeviceIdentifier</td>
+                                            <td class="align-middle text-end"></td>
+                                        </tr>
+                                    }
+                                    </tbody>
+                                </table>
+                            </div>
                         </div>
-                    </div>
-                    <div class="text-end">
-                        <button type="submit" class="btn btn-primary" id="saveMerchantButton">Save</button>
-                        <button type="button" class="btn btn-outline-secondary" hydro-action="Close" id="closeButton">Close</button>
-                    </div>
+                        <div class="text-end">
+                            <button type="submit" class="btn btn-primary" id="saveMerchantButton">Save</button>
+                            <button type="button" class="btn btn-outline-secondary" hydro-action="Close" id="closeButton">Close</button>
+                        </div>
                     </form>
+                    
+                    
+                    @if (Model.ShowOperatorDialog)
+                    {
+                        if (Model.OperatorId == Guid.Empty) {
+                            <hydro name="AddOperatorDialog" params="@(new { MerchantId = Model.MerchantId})"/>
+                        }
+                        else {
+                            <hydro name="OperatorDialog" params="@(new {OperatorId = Model.OperatorId, MerchantId = Model.MerchantId})" />
+                        }
+                    }
                 </div>
             </div>
             <div class="col-lg-5" align="center">
